--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5052,7 +5052,7 @@ form.comment-form .form_control:focus {
   margin-bottom: 16px;
 }
 .contact-info-item .info p {
-  font-size: 22px;
+  font-size: 19px;
   line-height: 30.8px;
 }
 @media (max-width: 1199px) {
@@ -5084,14 +5084,15 @@ form.comment-form .form_control:focus {
     17. Footer css 
 =================----*/
 .black-bg .footer-copyright, .black-bg .footer-widget {
-  color: #E1E1E1;
+  color: black;
+  font-weight: 400;
 }
 .black-bg .footer-top .social-box ul.social-link li a {
   background-color: rgba(255, 255, 255, 0.1);
   color: #B1B6B3;
 }
 .black-bg .single-info-item .info p {
-  color: #E1E1E1;
+  color: black;
 }
 .black-bg .footer-cta {
   border-color: rgba(217, 217, 217, 0.1);
