--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,3 +57,151 @@ select:disabled {
 select option {
   padding: 10px;
 }
+
+
+.date-picker {
+  display: inline-block;
+  background: rgba(40, 40, 250, .1);
+  min-width: 10rem;
+  min-height: 2rem;
+  padding: .5rem;
+  border-radius: .35rem;
+  position: relative;
+  isolation: isolate;
+}
+
+.date-picker,
+.date-picker>* {
+  cursor: text;
+  font-size: 1.2rem;
+}
+
+.date-picker:hover {
+  background: rgba(231, 231, 234, 0.28);
+}
+
+.date-picker:active {
+  background: rgba(233, 233, 234, 0.2);
+}
+
+.date-picker:focus>input[type="date"],
+.date-picker:focus-within>input[type="date"] {
+  color: rgb(0, 0, 0);
+}
+
+.date-picker:focus,
+.date-picker:focus-within {
+  box-shadow: 0 0 0 .1rem rgb(0, 0, 0);
+}
+
+.date-picker>.placeholder::after {
+  content: "Date";
+  pointer-events: none;
+  position: absolute;
+  inset: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+  color: #222;
+}
+
+.date-picker:focus>.placeholder,
+.date-picker:focus-within>.placeholder,
+.date-picker>input[type="date"]:valid+.placeholder {
+  display: none;
+}
+
+.date-picker>input[type="date"] {
+  background: none;
+  border: none;
+  outline: none;
+  color: transparent;
+  font-family: serif;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.date-picker>input[type="date"]:valid {
+  color: rgb(0, 0, 0) !important;
+}
+
+
+
+.time-picker {
+  display: inline-block;
+  background: rgba(40, 40, 250, .1);
+  min-width: 10rem;
+  min-height: 2rem;
+  padding: .5rem;
+  border-radius: .35rem;
+  position: relative;
+  isolation: isolate;
+}
+
+.time-picker,
+.time-picker>* {
+  cursor: text;
+  font-size: 1.2rem;
+}
+
+.time-picker:hover {
+  background: rgba(40, 40, 250, .28);
+}
+
+.time-picker:active {
+  background: rgba(40, 40, 250, .2);
+}
+
+.time-picker:focus>input[type="time"],
+.time-picker:focus-within>input[type="time"] {
+  color: #00f;
+}
+
+.time-picker:focus,
+.time-picker:focus-within {
+  box-shadow: 0 0 0 .1rem #00f;
+}
+
+.time-picker>.placeholder::after {
+  content: "Time";
+  pointer-events: none;
+  position: absolute;
+  inset: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+  color: #222;
+}
+
+.time-picker:focus>.placeholder,
+.time-picker:focus-within>.placeholder,
+.time-picker>input[type="time"]:valid+.placeholder {
+  display: none;
+}
+
+.time-picker>input[type="time"] {
+  background: none;
+  border: none;
+  outline: none;
+  color: transparent;
+  font-family: serif;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  top: 50%;
+  left:   
+ 50%;
+  transform: translate(-50%, -50%);
+}
+
+.time-picker>input[type="time"]:valid {
+  color: #00f !important;
+}
