--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,19 +61,25 @@ select option {
 
 .date-picker {
   display: inline-block;
-  background: rgba(40, 40, 250, .1);
+  background: #F9F9F7;
+  color: black;
   min-width: 10rem;
   min-height: 2rem;
   padding: .5rem;
   border-radius: .35rem;
   position: relative;
   isolation: isolate;
+  width: 100%;
+  border:1px solid rgba(29, 35, 31, 0.1);
+  padding: 19px 25px;
+  font-family: 'Prompt';
 }
 
 .date-picker,
 .date-picker>* {
   cursor: text;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  
 }
 
 .date-picker:hover {
@@ -137,17 +143,22 @@ select option {
   display: inline-block;
   background: rgba(40, 40, 250, .1);
   min-width: 10rem;
-  min-height: 2rem;
   padding: .5rem;
   border-radius: .35rem;
   position: relative;
   isolation: isolate;
+  width: 100%;
+  border:1px solid rgba(29, 35, 31, 0.1);
+  padding: 19px 25px;
+  background: #F9F9F7;
+  color: black;
+  text-align: center;
 }
 
 .time-picker,
 .time-picker>* {
   cursor: text;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .time-picker:hover {
@@ -165,7 +176,7 @@ select option {
 
 .time-picker:focus,
 .time-picker:focus-within {
-  box-shadow: 0 0 0 .1rem #00f;
+  box-shadow: 0 0 0 .1rem #F9F9F7;;
 }
 
 .time-picker>.placeholder::after {
@@ -196,6 +207,7 @@ select option {
   width: 100%;
   height: 100%;
   text-align: center;
+  padding-left: 22px;
   top: 50%;
   left:   
  50%;
@@ -203,5 +215,5 @@ select option {
 }
 
 .time-picker>input[type="time"]:valid {
-  color: #00f !important;
+  color: black !important;
 }
