--- a/styles/globals.css
+++ b/styles/globals.css
@@ -150,6 +150,7 @@ select option {
   background: #F9F9F7;
   color: black;
   min-width: 10rem;
+  min-height: 2rem;
   padding: .5rem;
   border-radius: .35rem;
   position: relative;
@@ -214,7 +215,6 @@ select option {
   width: 100%;
   height: 100%;
   text-align: center;
-  padding-left: 22px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
