--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,6 +143,22 @@ select option {
   color: rgb(0, 0, 0) !important;
 }
 
+.date-field{
+  width: 100%;
+  display: flex;
+  height: 60px;
+  background: #F9F9F7;
+  border:1px solid rgba(29, 35, 31, 0.1);
+  border-radius: .35rem;
+  margin-bottom: 15px;
+}
+
+.date-input{
+  background: #F9F9F7;
+  border: none!important;
+  padding: 2px 18px ;
+  color: #222;
+}
 
 
 .time-picker {
@@ -222,4 +238,13 @@ select option {
 
 .time-picker>input[type="time"]:valid {
   color: black !important;
+}
+
+.view-more-btn{
+  border-radius: 10px;
+  background: #222;
+  font-size: 14px;
+  color: #f2f2f2;
+  width: fit-content;
+  padding: 5px 10px;
 }
